<resources>
    <string name="require_restart_app">需要重启应用才能生效</string>
 <string name="settings_theme_wallpaper">使用壁纸</string>
    <string name="settings_theme_wallpaper_desc">使用系统壁纸作为窗口背景，显示为半透明界面</string>
<string name="pop_started">验证...</string>
    <string name="update_beta">正在检测Beta版更新</string>
    <string name="update_apk">正在检测正式版更新</string>
    <string name="format_hh_mm">%02d:%02d</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_not_now">回头再说</string>
    <string name="btn_delete">删除</string>
    <string name="btn_dontshow">不再显示</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_no">否</string>
    <string name="btn_yes">是</string>
    <string name="btn_continue">继续</string>
    <string name="btn_modify_confirm">确认修改</string>
    <string name="btn_help">帮助</string>
    <string name="btn_iknow">知道了</string>
    <string name="btn_exit">退出</string>
    <string name="btn_hide">隐藏</string>
    <string name="btn_resume">恢复</string>
    <string name="btn_skip">跳过</string>
    <string name="btn_retry">重试</string>
    <string name="btn_apply">应用</string>
    <string name="btn_reboot">重启</string>
    <string name="btn_resume_selected">恢复选中</string>
    <string name="make_choice">请确认</string>
    <string name="download">下载</string>
    <string name="error_su_timeout">等待超时，请确保你的Root管理器正在后台运行，并重试！\n\n请确保你没有阻止“授权管理器(SuperSu、Magisk Manager等)”自启动，并允许后台弹出窗口、显示悬浮窗等权限。如果一直没有弹出授权对话框，建议重启手机再试！\n</string>
    <string name="error_root">抱歉，没有获取到ROOT权限</string>
    <string name="error_root_desc">没有ROOT权限，将失去许多特色功能。\n如果你错过了授权提示，或未看到弹窗，请找到你的ROOT管理器，手动设置允许玩机百宝箱使用ROOT权限~</string>
    <string name="question_install_busybox">安装Busybox吗？</string>
    <string name="question_install_busybox_desc">你的手机似乎没有安装busybox，这会导致玩机百宝箱无法使用，是否要立即安装（需要修改System）？</string>
    <string name="share_link">你也来试试玩机百宝箱吧，我觉得还不错，下载地址：\n rootes.top</string>
    <string name="app_name">玩机百宝箱</string>
    <string name="app_name_short">玩机百宝箱</string>
    <string name="app_name_mode_switch">玩机百宝箱-快速切换模式</string>
    <string name="backup_action_title_boot">导出Boot</string>
    <string name="backup_action_desc_boot">备份当前使用中的Boot为img，复制到/sdcard/boot.img</string>
    <string name="restore_action_title_boot">刷入Boot</string>
    <string name="restore_action_desc_boot">选择刷入boot.img</string>
    <string name="backup_action_title_rec">导出Recovery</string>
    <string name="backup_action_desc_rec">备份当前使用中的导出Recovery为img，复制到/sdcard/recovery.img</string>
    <string name="restore_action_title_rec">刷入Recovery</string>
    <string name="restore_action_desc_rec">选择刷入recovery.img</string>
    <string name="backup_action_title_dtbo">导出DTBO分区</string>
    <string name="backup_action_desc_dtbo">导出DTBO分区为img镜像，复制到/sdcard/dtbo.img</string>
    <string name="restore_action_title_dtbo">刷入DTBO镜像</string>
    <string name="restore_action_desc_dtbo">选择刷入dtbo.img</string>
    <string name="backup_action_title_persist">导出Persist分区</string>
    <string name="backup_action_desc_persist">导出Persist分区为img镜像，复制到/sdcard/persist.img</string>
    <string name="restore_action_title_persist">刷入Persist镜像</string>
    <string name="restore_action_desc_persist">选择刷入persist.img</string>
    <string name="backup_file_exists">覆盖文件？</string>
    <string name="backup_img_exists">/sdcard/%s.img已经存在，是否覆盖已有文件？\n</string>
    <string name="backup_space_small">存储空间不足，请至少预留200M可用空间！</string>
    <string name="autobooster_tab_details">黑名单设置</string>
    <string name="autobooster_tab_system_scene">系统场景</string>
    <string name="auto_clear_ignore_chager">充电状态忽略</string>
    <string name="auto_clear_ignore_chager_desc">充电状态下，息屏动作延迟到充电完成才执行</string>
    <string name="settings_disable_selinux">SeLinux宽容模式</string>
    <string name="settings_disable_selinux_desc">将SELinux切换到宽容模式(部分软件叫[关闭Selinux])，SeLinux状态对玩机百宝箱没有任何影响，并且开启宽容模式可能会死机重启！</string>
    <string name="settings_theme">主题色调</string>
    <string name="settings_debug_layer">调试窗口</string>
    <string name="settings_debug_layer_desc">显示玩机百宝箱判定前台应用过程的日志</string>
    <string name="settings_help_icon">提示图标</string>
    <string name="settings_help_icon_desc">在功能项旁边显示功能说明提示（问号）图标</string>
    <string name="settings_auto_exit">异常时自动退出</string>
    <string name="settings_auto_exit_desc">运行过程出现异常时自动结束进程，避免卡死白屏</string>
    <string name="settings_logcat_title">测试版</string>
    <string name="settings_logcat_desc">如果你想优先体验测试版，可以点击下载测试版，测试版不稳定</string>
    <string name="settings_black_notification">黑色通知背景</string>
    <string name="settings_black_notification_desc">系统处于夜间模式时，将玩机百宝箱的常驻通知显示为黑色背景(正常情况无需开启此选项)</string>
    <string name="menu_home">概况</string>
    <string name="menu_paypal">捐赠打赏</string>
    <string name="menu_scene_mode">场景模式</string>
    <string name="menu_app_scene">应用场景</string>
    <string name="menu_system_scene">系统场景</string>
    <string name="menu_auto_click">自动点击</string>
    <string name="menu_cpu_modes">性能配置</string>
    <string name="menu_freeze">应用偏见</string>
    <string name="menu_battery_stats">耗电统计</string>
    <string name="menu_battery_stats_desc">查看应用使用过程中记录的功耗(电流)数据</string>
    <string name="menu_core_control">CPU 控制</string>
    <string name="menu_sundry">杂项设置</string>
    <string name="menu_additional">附加功能</string>
    <string name="menu_applictions">应用管理</string>
    <string name="menu_swap">SWAP设置</string>
    <string name="menu_battery">充电控制</string>
    <string name="menu_charge">充电统计</string>
    <string name="menu_power_utilization">耗电统计</string>
    <string name="menu_custom_command">自定义命令</string>
    <string name="menu_processes">进程管理</string>
    <string name="menu_modules">Magisk模块</string>
    <string name="menu_fps_chart">帧率记录</string>
    <string name="menu_app_magisk">附加模块</string>
    <string name="menu_gesture">手势导航</string>
    <string name="menu_xposed_app">应用设置</string>
    <string name="menu_xposed_global">全局设置</string>
    <string name="menu_filter">屏幕滤镜</string>
    <string name="menu_img">备份还原</string>
    <string name="menu_qq">吹牛扯淡</string>
    <string name="menu_menu_title">反馈交流</string>
    <string name="menu_share">分享应用</string>
    <string name="menu_miui_thermal">MIUI温控</string>
    <string name="system">系统</string>
    <string name="accessibility_running">辅助服务已激活</string>
    <string name="accessibility_stoped">点击此处去激活辅助服务</string>
    <string name="accessibility_service_description">玩机百宝箱增强服务\n你需要激活本服务，才能使用以下功能：\n\n1.动态响应（根据前台应用自动调整性能）.\n\n2.自动行为（在开关屏幕时切换网络或切换应用时回收进程）.\n\n3.自动安装（安装第三方应用时自动点击下一步）</string>
    <string name="accessibility_please_activate">请在系统设置里激活[玩机百宝箱 辅助服务]选项（部分机型已自动打开）</string>
    <string name="accessibility_activate">未激活辅助服务，点此去激活</string>
    <string name="accessibility_activate_desc">按应用调节性能、自动开关GPS、记录耗电速度，均需要激活此服务</string>
    <string name="battery_title">电池：</string>
    <string name="battery_title_desc1">如需使用“充电调速”、“充电保护”功能，请务必保持玩机百宝箱后台运行！</string>
    <string name="battery_reality_limit">实际上限电流：</string>
    <string name="battery_pd_allowed">USB-PD快充</string>
    <string name="battery_pd_allowed_desc">手机会根兼容情况决定是否激活USB-PD充电，无需手动设置。手动开关会导致充电速度缓慢，因此不允许手动修改！</string>
    <string name="battery_pd_active_state">当前状态：</string>
    <string name="battery_pd_active_1">已进入PD快充模式</string>
    <string name="battery_pd_active_0">未进入PD快充模式</string>
    <string name="battery_auto_boot_desc">OK，如果你要手机重启后自动开启本功能，请允许玩机百宝箱开机自启！</string>
    <string name="battery_qc_rehoot_desc">充电加速服务已禁用，可能需要重启手机才能恢复默认设置！</string>
    <string name="battery_pd_active_unknown">未知</string>
    <string name="battery_uevent_title">$ bms/uevent</string>
    <string name="battery_usb_uevent_title">$ usb/uevent</string>
    <string name="battery_night_mode_time">%02d:%02d</string>
    <string name="battery_night_mode">动态充电速度</string>
    <string name="battery_night_mode_desc">在接近充满时调至缓慢充电\n\n并在夜间主动降低充电速度</string>
    <string name="battery_time_get_up">起床时间</string>
    <string name="battery_time_sleep">入睡时间</string>
    <string name="battery_manual_control">手动控制</string>
    <string name="battery_charge_disable">禁止充电</string>
    <string name="battery_charge_resume">恢复充电</string>
    <string name="battery_usage_history">电池使用记录</string>
    <string name="battery_view_history">查看记录</string>
    <string name="battery_delete_history">删除记录</string>
    <string name="battery_bp">充电保护</string>
    <string name="battery_bp_desc">达到指定电量后停止充电\n\n注意：长期使用可能导致电量显示失准</string>
    <string name="battery_bp_level_desc">电量限制值（%）</string>
    <string name="battery_qc_charger">充电调速</string>
    <string name="battery_bp_status">达到%d%%停止充电，低于%d%%恢复</string>
    <string name="battery_qc_charger_desc">调整充电速度限制。疯狂调高毫无意义，因为并不会取得实际效果，请在有效范围内调节数值\n\n注意：上限数值仅供参考，请以实际充电速度为准！</string>
    <string name="battery_charge_disabled">充电功能已禁止！</string>
    <string name="battery_charge_resumed">充电功能已恢复！</string>
    <string name="battery_forgery">数据伪装</string>
    <string name="battery_forgery_ratio">电池电量</string>
    <string name="battery_forgery_full_now">充满容量</string>
    <string name="battery_step_charge">阶梯式充电</string>
    <string name="battery_step_charge_desc">系统根据电量分阶段调整充电速度上限，有助于保护电池寿命\n\n一般建议保持默认设置</string>
    <string name="battery_exec_option">充电调速目的</string>
    <string-array name="battery_exec_options">
        <item>降低速度</item>
        <item>加速充电</item>
        <item>往死里充</item>
    </string-array>
    <string name="battery_exec_desc">玩机百宝箱会根据你的选择在不同时机执行速度变更，具体差异如下\n\n降低速度：只在充电器连接和电量百分比变化时重新设置充电速度\n加速充电：电池状态发生变化、充电器连接时重新设置充电速度\n往死里充：在[充电加速]的逻辑基础上，每秒自动重新设置充电速度</string>
    <string name="battery_voltage">当前电压：</string>
    <string name="battery_electricity">当前电流：</string>
    <string name="battery_temperature">当前温度：</string>
    <string name="battery_status_discharging">未充电</string>
    <string name="battery_status_charging">充电中</string>
    <string name="battery_status_full">已充满</string>
    <string name="battery_status_not_charging">未充电</string>
    <string name="battery_status_unknown">状态未知</string>
    <string name="battery_status_sum">\n约充入 %smAh</string>
    <string name="electricity_unit_adj">电流单位校准</string>
    <string name="electricity_unit_adj_desc">当前充电速度，除以：</string>
    <string name="electricity_unit_as">显示为：</string>
    <string name="electricity_unit_adj_desc2">充电应显示为正数，放电应显示为负数\n如果是0mA，请设置-1</string>
    <string name="schedule_source">选择配置源</string>
    <string name="schedule_classics">经典配置</string>
    <string name="schedule_classics_desc">玩机百宝箱提供的预设，各个模式泾渭分明</string>
    <string name="schedule_positive">偏重性能</string>
    <string name="schedule_positive_desc">玩机百宝箱提供的预设，整体上更关注性能释放</string>
    <string name="schedule_scene_desc">根据前台应用变化，自动切换模式</string>
    <string name="schedule_scene">动态响应</string>
    <string name="schedule_excellent">卓越性能</string>
    <string name="schedule_excellent_desc">解除游戏限频/锁帧及高温提示，请注意保护您的设备！</string>
    <string name="schedule_screen_on">全局默认（亮屏状态）</string>
    <string name="schedule_screen_on_desc">未单独设置调度模式的应用，将默认使用此模式。\n\n如需为某个应用单独设置模式，请点击当前界面下方的 [应用策略]</string>
    <string name="schedule_screen_off">待机时切换</string>
    <string name="schedule_screen_off_desc">手机进入待机状态后，将切换至选定的模式</string>
    <string name="schedule_delay_desc">前台应用发生变化后，延迟5s再执行调度模式切换</string>
    <string name="schedule_delay">延迟切换</string>
    <string name="schedule_enhanced">严格模式</string>
    <string name="schedule_enhanced_desc">若未开启此选项，玩机百宝箱只会在需要变换档位时执行调度配置文件，例如：在多个设为[省电模式]的应用之间切换，调度配置文件只会被执行一次。\n\n严格模式下，玩机百宝箱会在每次前台应用发生变化时都执行调度配置文件，并告知被切换到前台运行的应用(包名)。调度配置作者可利用此特性，为不同的应用单独设计调度参数，而不再受限于只有四个档位的限制。\n\n骁龙855、865、888机型使用[经典配置][偏重性能]配置源时，可开启严格模式，在以下应用中体验专属优化:\n原神(官服、B服、小米服)\n闲鱼、淘宝、京东、天猫、百度贴吧\n双生视界\n哔哩哔哩、抖音\n\n其它处理器机型，除非正在使用外部配置源头(且配置作者已注明支持此特性)，否则无需开启此选项！</string>
    <string name="schedule_app">应用策略</string>
    <string name="schedule_app_desc">为每个应用单独设置调度策略</string>
    <string name="schedule_unfinished">在安装有效的调度配置之前，你不能开启本功能~</string>
    <string name="schedule_remove_outside">你已安装其它作者提供的调度配置(位于/data/powercfg.sh)，更改配置源需先将其删除。现在要删除它吗？\n\n* 删除后建议重启手机一次</string>
    <string name="schedule_unofficial">你正在使用其它作者提供的调度配置~</string>
</resources>