<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:keepScreenOn="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout style="@style/ListCardItem">

                <Switch
                    android:id="@+id/settings_disable_selinux"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_disable_selinux" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_disable_selinux_desc" />
            </LinearLayout>

            <LinearLayout style="@style/ListCardItem">

                <Switch
                    android:id="@+id/settings_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="检查更新" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="开启/关闭检查更新" />
            </LinearLayout>


            <LinearLayout style="@style/ListCardItem">

                <Switch
                        android:id="@+id/settings_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="热更新" />

                <TextView
                        style="@style/textSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="可以不用下载新版本就可以体验新功能了" />
            </LinearLayout>



            <LinearLayout style="@style/ListCardItem">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_theme" />

                    <Button
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/theme_wallpaper"
                        android:onClick="onThemeClick"
                        android:layout_margin="2dp"
                        android:tag="10" />

                    <Button
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="6dp"
                        android:background="@color/black_overlay"
                        android:onClick="onThemeClick"
                        android:layout_margin="2dp"
                        android:tag="-2" />

                    <Button
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="6dp"
                        android:background="@android:color/white"
                        android:onClick="onThemeClick"
                        android:layout_margin="2dp"
                        android:tag="-3" />

                    <Button
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/theme_light"
                        android:onClick="onThemeClick"
                        android:layout_margin="2dp"
                        android:tag="-1" />
                </LinearLayout>

                <Switch
                    android:id="@+id/settings_black_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="onThemeClick"
                    android:tag="10"
                    android:text="@string/settings_black_notification" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_black_notification_desc" />
            </LinearLayout>

            <LinearLayout style="@style/ListCardItem">

                <Switch
                    android:id="@+id/settings_debug_layer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThemeClick"
                    android:tag="10"
                    android:text="@string/settings_debug_layer" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_debug_layer_desc" />

                <Switch
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:id="@+id/settings_help_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onThemeClick"
                    android:tag="10"
                    android:text="@string/settings_help_icon" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_help_icon_desc" />

                <Switch
                    android:id="@+id/settings_auto_exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="onThemeClick"
                    android:tag="10"
                    android:text="@string/settings_auto_exit" />

                <TextView
                    style="@style/textSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_auto_exit_desc" />

                <TextView
                    style="@style/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/settings_logcat_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/settings_logcat_desc"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/settings_logcat"
                        style="@style/SceneButton"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_logcat_title"
                        android:textSize="11dp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/nav_magisk"
                    style="@style/ListCardItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="KrScript脚本设置" />

                    <TextView
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="个性化玩机百宝箱" />
                </LinearLayout>

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:alpha="0.8"
                        android:padding="5dp"
                        android:src="@drawable/kr_arrow"
                        android:tint="?android:colorAccent" />
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/nav_wx"
                    style="@style/ListCardItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="赞助" />

                    <TextView
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="谢谢大家的赞助，让软件做的更好" />
                </LinearLayout>

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:alpha="0.8"
                        android:padding="5dp"
                        android:src="@drawable/kr_arrow"
                        android:tint="?android:colorAccent" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/nav_bug"
                style="@style/ListCardItemClickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="反馈/建议" />

                    <TextView
                        style="@style/textSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="让软件做的更好" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:alpha="0.8"
                    android:padding="5dp"
                    android:src="@drawable/kr_arrow"
                    android:tint="?android:colorAccent" />
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/nav_cat"
                    style="@style/ListCardItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="交流群" />

                    <TextView
                            style="@style/textSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我们一起交流" />
                </LinearLayout>

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:alpha="0.8"
                        android:padding="5dp"
                        android:src="@drawable/kr_arrow"
                        android:tint="?android:colorAccent" />
            </LinearLayout>



            <LinearLayout
                    android:id="@+id/nav_null"
                    style="@style/ListCardItemClickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            style="@style/textTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="编译信息" />

                </LinearLayout>

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:alpha="0.8"
                        android:padding="5dp"
                        android:src="@drawable/kr_arrow"
                        android:tint="?android:colorAccent" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/nav_about"
                style="@style/ListCardItemClickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="关于" />

                    <TextView
                        style="@style/textSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="关于此软件" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:alpha="0.8"
                    android:padding="5dp"
                    android:src="@drawable/kr_arrow"
                    android:tint="?android:colorAccent" />
            </LinearLayout>

            
            <EditText
                android:id="@+id/settings_log_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:textSize="10dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
